welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
def couleurBrosse(c:Color):Double ={
^PatternPicture:1: error: expected class or object definition
def couleurBrosse(c:Color):Double ={
^PatternPicture:7: error: expected class or object definition
def carre1(c:Color):Double = {
^PatternPicture:21: error: expected class or object definition
def carre2(c:Color):Double {
^PatternPicture:37: error: expected class or object definition
def ligne1():{
^PatternPicture:44: error: expected class or object definition
def ligne2():{
^